--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
   "license": "MIT",
   "devDependencies": {
     "@4tw/cypress-drag-drop": "^2.2.5",
-    "cypress": "^13.6.1",
-    "typescript": "^5.3.3"
+    "@testing-library/cypress": "^10.0.1",
+    "@vue/cli-service": "^5.0.8",
+    "cypress": "^13.6.2",
+    "typescript": "^5.3.3",
+    "vue": "^3.3.13"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1"
   }
 }
